--- a/analysis.html
+++ b/analysis.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
-      h1 {font-size: 30px;}
-      h2 {font-size: 25px;}
-      h3 {font-size: 25px;}
-      h4 {font-size: 25px;}
+      h1 {font-size: 40px;}
+      h2 {font-size: 23px;}
+      h3 {font-size: 23px;}
     </style>
 </head>
 
@@ -20,23 +19,30 @@
  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="navbar-brand">
-    <button class="btn btn-info">ETL Project</button>
+    <button class="btn btn-info">Healthcare Potential Fraud</button>
   </div>
   <div class="collapse navbar-collapse" id="navbarsupport">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="main.html" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Project Report
+          Data
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="Resources/images/State_Fraud_ERD.png">State Fraud ERD</a>
-          <a class="dropdown-item" href="">Common Procedures ERD</a>
+          <a class="dropdown-item" href="">Inpatient</a>
+          <a class="dropdown-item" href="">Outpatient</a>
+          <a class="dropdown-item" href="">Potential Fraud</a>
+          <a class="dropdown-item" href="">Beneficiary</a>
         </div>
       </li>
       <div class="navbar-brand"></div>
       <li class="nav-item active">
-        <a class="nav-link" href="">Data
+        <a class="nav-link" href="Resources/images/State_Fraud_ERD.png">ERD
+            <span class="sr-only">(current)</span></a>
+      </li>
+      <div class="navbar-brand"></div>
+      <li class="nav-item active">
+        <a class="nav-link" href="">Analysis
             <span class="sr-only">(current)</span></a>
       </li>
     </ul>
@@ -45,21 +51,17 @@
 <!---------------------  NAVIGATION BAR ----------------------->
 
 <main>
-    <section>
-        <h1>Project Report</h1>
-            <p>Dataset Used: https://www.kaggle.com/rohitrox/healthcare-provider-fraud-detection-analysis</p>
-            <p>Which states/localities have the highest number of frauds?</p>
-            <p>What are the most common Procedures and Diagnosis codes?</p>
-    </section>
-    <section>
-        <h2>Extract</h2>
-    </section>
-    <section>
-        <h3>Transform</h3>
-    </section>
-    <section>
-        <h4>Load</h4>
-    </section>
+  <section>
+    <h1 style="text-align:center">Analysis</h1>
+    <p style="text-align:center;"><img src="Resources/images/medicare-fraud.jpg" alt="Healthcare Fraud" class="img-thumbnail"></p>
+  </section>
+  <section>
+    <h2>What are the most common Procedures and Diagnosis codes?</h2>
+  </section>
+  <section>
+    <h3>Which states/localities have the highest number of frauds?</h3>
+  </section>
+
 </main>
 
   
