Updated website with breakdown of analysis tabs

--- a/common_codes.html
+++ b/common_codes.html
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarsupport">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="main.html" id="navbarDropdown" role="button" data-toggle="dropdown"
+        <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Data
         </a>
@@ -36,13 +36,19 @@
         </div>
       </li>
       <div class="navbar-brand"></div>
-      <li class="nav-item active">
-        <a class="nav-link" href="Resources/images/State_Fraud_ERD.png">ERD
-            <span class="sr-only">(current)</span></a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Analysis
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="by_state.html">Fraud by State</a>
+          <a class="dropdown-item" href="common_codes.html">Most Common Procedure Codes</a>
+        </div>
       </li>
       <div class="navbar-brand"></div>
       <li class="nav-item active">
-        <a class="nav-link" href="">Analysis
+        <a class="nav-link" href="Resources/images/State_Fraud_ERD.png">ERD
             <span class="sr-only">(current)</span></a>
       </li>
     </ul>
@@ -52,14 +58,7 @@
 
 <main>
   <section>
-    <h1 style="text-align:center">Analysis</h1>
-    <p style="text-align:center;"><img src="Resources/images/medicare-fraud.jpg" alt="Healthcare Fraud" class="img-thumbnail"></p>
-  </section>
-  <section>
-    <h2>What are the most common Procedures and Diagnosis codes?</h2>
-  </section>
-  <section>
-    <h3>Which states/localities have the highest number of frauds?</h3>
+    <h1 style="text-align:center">What are the most common procedures and diagnosis codes?</h1>
   </section>
 
 </main>
