--- a/by_state.html
+++ b/by_state.html
@@ -8,6 +8,8 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
       h1 {font-size: 40px;}
+      h2 {font-size: 23px;}
+      h3 {font-size: 23px;}
     </style>
 </head>
 
@@ -56,9 +58,9 @@
 
 <main>
   <section>
-    <h1 style="text-align:center">Healthcare Provider Fraud Detection Analysis</h1>
-    <p style="text-align:center;"><img src="Resources/images/medicare-fraud.jpg" alt="Healthcare Fraud" class="img-thumbnail"></p>
+    <h1 style="text-align:center">Which states/localities have the highest number of frauds?</h1>
   </section>
+
 </main>
 
   
