--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           Data
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="">Inpatient</a>
-          <a class="dropdown-item" href="">Outpatient</a>
-          <a class="dropdown-item" href="">Potential Fraud</a>
-          <a class="dropdown-item" href="">Beneficiary</a>
+          <a class="dropdown-item" href="inpatient.html">Inpatient</a>
+          <a class="dropdown-item" href="outpatient.html">Outpatient</a>
+          <a class="dropdown-item" href="potential_fraud.html">Potential Fraud</a>
+          <a class="dropdown-item" href="beneficiary.html">Beneficiary</a>
         </div>
       </li>
       <div class="navbar-brand"></div>
