--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="navbar-brand">
-    <button class="btn btn-info">Healthcare Potential Fraud</button>
+    <a href="index.html"><button class="btn btn-info">Healthcare Potential Fraud</button></a>
   </div>
   <div class="collapse navbar-collapse" id="navbarsupport">
     <ul class="navbar-nav mr-auto">
