--- a/common_codes.html
+++ b/common_codes.html
@@ -19,7 +19,7 @@
  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="navbar-brand">
-    <button class="btn btn-info">Healthcare Potential Fraud</button>
+    <a href="index.html"><button class="btn btn-info">Healthcare Potential Fraud</button></a>
   </div>
   <div class="collapse navbar-collapse" id="navbarsupport">
     <ul class="navbar-nav mr-auto">
@@ -29,10 +29,10 @@
           Data
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="">Inpatient</a>
-          <a class="dropdown-item" href="">Outpatient</a>
-          <a class="dropdown-item" href="">Potential Fraud</a>
-          <a class="dropdown-item" href="">Beneficiary</a>
+          <a class="dropdown-item" href="inpatient.html">Inpatient</a>
+          <a class="dropdown-item" href="outpatient.html">Outpatient</a>
+          <a class="dropdown-item" href="potential_fraud.html">Potential Fraud</a>
+          <a class="dropdown-item" href="beneficiary.html">Beneficiary</a>
         </div>
       </li>
       <div class="navbar-brand"></div>
