--- a/by_state.html
+++ b/by_state.html
@@ -59,6 +59,15 @@
 <main>
   <section>
     <h1 style="text-align:center">Which states/localities have the highest number of frauds?</h1>
+    <p style="text-align:center;"><img src="Map of USA with numbers.gif" alt="Map of USA with Numbers" width="600px" height="1200px" class="img-thumbnail"></p>
+  </section>
+  <section>
+    <h2>Inpatient Fraud by State</h2>
+    <img src="Inpatient Fraud Graph.PNG" alt="Inpatient Fraud Graph by State" class="img-thumbail">
+  </section>
+  <section>
+    <h2>Outpatient Fraud by State</h2>
+    <img src="Outpatient Fraud Graph.PNG" alt="Outpatient Fraud Graph by State" class="img-thumbail">
   </section>
 
 </main>
